Update Greeting - Added create form for case: User first time go to clinic